# ipriot-car-park-prj

./: .gitignore  README.md  justfile  outlines-objectives.md  pyproject.toml  requirements-dev.txt
src/: car_park.py  config.py  display.py  main.py  sensor.py  utils.py
tests/: test_car_park.py  test_config.py  test_display.py  test_sensor.py
