[project]
name = "ipriot-car-park-prj"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["ruff", "radon", "vulture"]

[project.license]
text = "Apache License"

[tool.ruff]
line-length = 79
fix = true
unsafe-fixes = true
preview = true

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
reportAny = false
reportUnusedParameter = false
reportUnreachable = false

[tool.radon]
cc = [ "-a", "-nc", "-s",]
mi = [ "-s",]

[tool.ruff.lint]
preview = true
select = [ "RUF", "F", "W", "N", "I", "E", "A", "B", "Q", "PL", "C90", "UP", "RET", "SIM", "NPY", "PD", "ARG", "TID", "PTH", "ISC", "PIE", "YTT", "ASYNC", "C4", "T10", "COM", "RSE", "PGH", "PLR", "PLC", "PGH", "FURB", "PLW", "TRY", "PERF", "EXE", "DTZ", "INT", "ISC", "ICN", "LOG", "FLY", "EM", "SLF", "SLOT", "FBT", "BLE", "ANN", "TC",]
ignore = [ "PLR0913", "PLR0911", "PLR0914", "PLR6301", "PD901", "E501", "G004", "RUF100", "PGH003", "PLR0911", "PLR0912", "COM812", "ISC001", "TRY003", "TRY300", "EXE001"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = "dynamic"
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
